style.css
/* --------------- START IONSYS CSS ----------------*/

html{
	overflow-x:hidden;
}

*{
	margin:0;
    -webkit-tap-highlight-color: rgba(0,0,0,0);

}

body{
	font-family: 'Raleway', Georgia, Arial, Verdana;
	-webkit-font-smoothing: subpixel-antialiased;
	-moz-font-smoothing: subpixel-antialiased;
	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
	margin: 0;
	background-color: black;
	color:white;

}

span {
	display:inline;
}

@font-face {
    font-family: 'Raleway';
    src: url('raleway-webfont.eot');
    src: url('raleway-webfont.eot?#iefix') format('embedded-opentype'),
         url('raleway-webfont.woff') format('woff'),
         url('raleway-webfont.ttf') format('truetype'),
         url('raleway-webfont.svg#ralewaythin') format('svg');
    font-weight: bold;
    font-style: normal;

}


@font-face {
	font-family: "Flaticon";
	src: url("icons/flaticon.eot");
	src: url("icons/flaticon.eot#iefix") format("embedded-opentype"),
	url("icons/flaticon.woff") format("woff"),
	url("icons/flaticon.ttf") format("truetype"),
	url("icons/flaticon.svg") format("svg");
	font-weight: normal;
	font-style: normal;
}


/*deviceCSS */

img{
	-webkit-transition: -webkit-transform 0.3s ease-in;
	-moz-transition: -moz-transform 0.3s ease-in;
	transition: transform 0.3s ease-in;

}

.debugLog{
	position:absolute;
	right:0;
	top:0;
	z-index:999;
	color:white;
}

.container{
	text-align:center;
	width:100%;
	height:100%;
}

/*initial assembly CSS */
.packageAssembly{
	width:auto;
}

.packageAssembly>div{
	margin:0;
	display:inline-block;
}

.bottomAssy {
	position:relative;
	margin:auto;
	width:295px;
	height:500px;
	background-image: url('img-ionsys-drugunit-top.png');
}

.bottomAssySnapPoint{
	width:1px;
	height:500px;
}

.topAssy {
	position:absolute;
	margin:auto;
	right:-5em;
	bottom:0;
	width:295px;
	height:500px;
	cursor:-webkit-grab;
	background-image: url('img-ionsys-controller-top.png');
}

.topAssy:active{
	cursor:-webkit-grabbing;
}

.device{
	position:relative;
	margin:auto;
	width:295px;
	height:500px;
	background-image: url('img-ionsys2-blank.png');
}

.backgroundAssembly{
	width:100%; /*this will give a slight positioning issue if 
				window width < 295px, but should not happen on min 320x screen */
	height:500px;
	background-image: url('img-ionsys2-blank.png');
	background-repeat:no-repeat;
	background-position:center;
	display:block;
	position:absolute;
}


.device .led{
	position:absolute;
	height:75px;
	width:295px;
}

.ledGreen{
	background-image: url('led-green.png');
}

.ledRed{
	background-image: url('led-red.png');
}

.doseButton{
	position:absolute;
	-webkit-tap-highlight-color: rgba(0,0,0,0);
	cursor:pointer;
	margin-left:107px;
	margin-top:76px;
	height:81px;
	width:80px;
	border-radius:40px;
	/*background-image: url('dosebutton-up.png');*/
	z-index:100;
}

.doseButtonPressed{
	background-image: url('dosebutton-down_s.png');
}

/* HEADER LOGO CSS */

.pageHeader{
	position:fixed;
	padding-top:0px;
	width:100%;
}

.frontHeader{
	position:fixed;
	z-index:100;
}

.backHeader{
	z-index:1;
	background-color:rgba(0,0,0,.5);
}

.ionsysLogo img{
	width:200px;
}

.ionsysLogo h3{
	display:none;
}

#headerLogo{
	width:161px;
	height:50px;
	background-image:url('img-ionsyslogo4.png');
	background-repeat:no-repeat;
	background-size:100%;
}

#headerLogoCircle{
	width:44px;
	height:50px;
	/*margin: 1em 0 0 1em;*/
	background-image:url('logo-ionsys-circle2.png');
	background-size:100%;
}

/* MAIN PAGE CSS */

.splash{
	position:relative;
	background: url(bg-hospitalroom2.jpg);
	background-size: auto 100%;
	background-color:black;
	z-index:10;
	text-align:center;
	/*padding-bottom:1em;*/
	margin-bottom:-70px;
	overflow:hidden;
}

.splash .container{
	z-index:10;
	padding-top:0;
}


.container h2{
	font-size:3em;
}

.container h3{
	/*padding:.5em 0 .5em;*/
}

.container h4{
	padding:1em;
}
.container p{
	text-align:justify;
}

.container article{
	padding:0em 2em 1em;
}

#medcoLogo{
	position:relative;
	width:15em;
	margin:auto;
	/*bottom:2em;*/
	/*margin-top:25%;*/
}

#medcoLogo img{
	width:100%;
}

.caption{
	padding:.5em;
}



/*START SEVEN SEGMENT DISPLAY CSS */
.seven-segment {
	z-index:99;
  	position: absolute;
  	margin:auto;
  	width:500px;
  	left:-100px;
  	top:110px;
  	-webkit-transform:scale(0.12);
  	-moz-transform:scale(0.12);
  	-ms-transform:scale(0.12);
  	transform:scale(0.12);
}

.digit{
	position:relative;
	display:inline-block;
	width:180px;
	height:350px;
	margin: 1.5em;
}

.digit ones{

}

.digit .a {
  position: absolute;
  left: 10px;
  height: 0;
  width: 100px;
  border-top: 30px solid #000;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
}
.digit .b {
  position: absolute;
  left: 150px;
  top: 10px;
  height: 100px;
  width: 0;
  border-right: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .c {
  position: absolute;
  left: 150px;
  top: 180px;
  height: 100px;
  width: 0;
  border-right: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .d {
  position: absolute;
  top: 320px;
  left: 10px;
  height: 0;
  width: 100px;
  border-bottom: 30px solid #000;
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
}
.digit .e {
  position: absolute;
  left: 0;
  top: 180px;
  height: 100px;
  width: 0;
  border-left: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}
.digit .f {
  position: absolute;
  left: 0;
  top: 10px;
  height: 100px;
  width: 0;
  border-left: 30px solid #000;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
}

.digit .g:before{
	position:absolute;
	content: " ";
	height:14px;
	left:0px;
	top:-34px;
	width:120px;
	border-bottom: 20px solid #000;
	border-left: 20px solid transparent;
	border-right: 20px solid transparent;
}
/* ... */

